styling changes to live feed

--- a/AskMeAQuestion/AskMeAQuestion.csproj
+++ b/AskMeAQuestion/AskMeAQuestion.csproj
@@ -247,6 +247,7 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="css\landing-page.css" />
+    <Content Include="css\live-feed.css" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <EntityDeploy Include="Models\AskMeAQuestionModel.edmx">
@@ -306,6 +307,8 @@
     <Content Include="Views\Home\LiveFeed.cshtml" />
     <Content Include="Views\Home\ClassList.cshtml" />
     <Content Include="Views\Home\CourseHistory.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\Shared\_Ask.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
