--- a/AskMeAQuestion/AskMeAQuestion.csproj
+++ b/AskMeAQuestion/AskMeAQuestion.csproj
@@ -186,6 +186,7 @@
     <Compile Include="ViewModels\CreateCourseViewModel.cs" />
     <Compile Include="ViewModels\IndexViewModel.cs" />
     <Compile Include="ViewModels\LiveFeedViewModel.cs" />
+    <Compile Include="ViewModels\QuestionViewModel.cs" />
     <Compile Include="ViewModels\RegisterViewModel.cs" />
     <Compile Include="ViewModels\SessionViewModel.cs" />
     <Compile Include="ViewModels\UserInterfaceViewModel.cs" />
